--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "app.js",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "playwright": "^1.43.1"
+    "playwright": "^1.54.2"
   }
 }
